[package]
name = "cargo-wapm"
version = "0.1.4"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>", "Hammer of the Gods <developers@hotg.ai>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "Publish a Rust crate to the WebAssembly Package Manager."
edition = "2021"
keywords = ["wapm", "WebAssembly", "publish"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/cargo-wapm"
rust-version = "1.56"

[dependencies]
anyhow = "1"
cargo_metadata = "0.15"
clap = { version = "3", features = ["derive", "env"] }
serde = "1"
toml = "0.5"
tracing = { version = "0.1.34", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[workspace]
members = [".", "examples/hello-world"]

[profile.release]
strip = "debuginfo"
