[package]
name = "cargo-wasmer"
version = "0.3.7"
authors = [
    "Michael-F-Bryan <michaelfbryan@gmail.com>",
    "Hammer of the Gods <developers@hotg.ai>",
    "Wasmer Engineering Team <engineering@wasmer.io>",
]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "Publish a Rust crate to the WebAssembly Package Manager."
edition = "2021"
keywords = ["wasmer", "WebAssembly", "publish", "registry"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmerio/cargo-wapm"
rust-version = "1.56"

[dependencies]
anyhow = "1"
cargo_metadata = "0.15"
clap = { version = "4", features = ["derive", "env"] }
clap-cargo = { version = "0.10.0", features = ["cargo_metadata"] }
serde = "1"
toml = "0.7"
tracing = { version = "0.1.34", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
wapm-toml = "0.4"

[profile.release]
strip = "debuginfo"

[workspace]
members = [".", "examples/hello-world"]
