[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
description = "A dummy package."
readme = "../../README.md"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.wapm]
namespace = "Michael-F-Bryan"
abi = "wasi"

[lib]
crate-type = ["cdylib", "rlib"]
